--- a/packages/ui-library/src/css/forms/_translation-picker.scss
+++ b/packages/ui-library/src/css/forms/_translation-picker.scss
@@ -1,13 +1,13 @@
-.translation-picker {
-    .collapsible-link,
-    .collapsible-link:hover {
+.translation-picker { // added specificity to all of these to override .collapsible-link styles
+    & &__link,
+    & &__link:hover {
         @include text-value;
         text-decoration: none;
     }
-    .collapsible-link:after {
+    & &__link:after {
         color: $color-value-text !important;
     }
-    .collapsible-link.right:after {
+    & &__link.right:after {
         right: -18px;
     }
 }
