UIP-3185 Changed CSS so sections cannot be highlighted for light-mode nav

--- a/packages/ui-library/src/css/_layout.scss
+++ b/packages/ui-library/src/css/_layout.scss
@@ -724,6 +724,7 @@ $color-grey-minor-1: $color-neutral-30;
         }
 
         .nav-section.open.selected .title {
+            background-color: $color-neutral-80;
             font-weight: 400;
         }
 
