UIP-3304: Create Chart template

--- a/packages/ui-library/src/css/_layout.scss
+++ b/packages/ui-library/src/css/_layout.scss
@@ -6,6 +6,7 @@
 @import 'general/global-message';
 @import 'general/image-component';
 @import 'layout/dashboard-cards';
+@import 'layout/card-grid';
 @import 'layout/charts';
 @import 'layout/_disabled.scss';
 @import 'layout/hero-chart';
