--- a/packages/ui-library/src/css/layout/_dashboard-cards.scss
+++ b/packages/ui-library/src/css/layout/_dashboard-cards.scss
@@ -138,6 +138,7 @@ $fullwidthBreakpoint: 950px;
         color: $color-neutral-10;
         display: flex;
         justify-content: center;
+        word-break: break-word;
 
         &--donut,
         &--multiseries,
