UIP-3291 Chart sizing and spacing issues, Rocker button container for in flexbox

--- a/packages/ui-library/src/css/_buttons.scss
+++ b/packages/ui-library/src/css/_buttons.scss
@@ -448,6 +448,10 @@ button,
     border-radius: 3px;
     @include base-button-styles;
 
+    &__container {
+        display: inline-block;
+    }
+
     button,
     .help-tooltip > .helphint-button-target > button {
         @include text-style();
