--- a/packages/ui-library/src/css/_result-sets.scss
+++ b/packages/ui-library/src/css/_result-sets.scss
@@ -78,6 +78,7 @@ $expandable-row-gap: 12px;
 
         .tab-set,
         .rocker-button,
+        .rocker-button__container,
         > .flex-row {
             margin-left: 0;
         }
