UIP-3278: Chip wrapping

--- a/packages/ui-library/src/css/layout/_chip.scss
+++ b/packages/ui-library/src/css/layout/_chip.scss
@@ -18,6 +18,7 @@
     display: inline-block;
     padding: $spacing-xs $spacing-sm;
     border-width: 0;
+    @include break-word;
 
     &--color-cyan {
         @include chip($color-neutral-20, $color-charting-cyan);
