UIP-3318: Fixed issue where tooltip would jump if it was out of bounds

--- a/packages/ui-library/src/css/layout/_dashboard-cards.scss
+++ b/packages/ui-library/src/css/layout/_dashboard-cards.scss
@@ -565,6 +565,10 @@ $fullwidthBreakpoint: 950px;
     }
 }
 
+.column-chart__line {
+    pointer-events: none;
+}
+
 .column-chart-wrapper {
     &__rocker {
         margin-top: $spacing-sm;
