UIP-3276: Fix TextBlock wrapping

--- a/packages/end-user/src/css/components/_text-block.scss
+++ b/packages/end-user/src/css/components/_text-block.scss
@@ -8,6 +8,10 @@
         text-align: left;
     }
 
+    &--overflow-wrap {
+        @include break-word;
+    }
+
     &--overflow-ellipsis {
         overflow: hidden;
         text-overflow: ellipsis;
