UIP-3335 Adding ldap icon

--- a/packages/ui-library/src/css/icons/_style.scss
+++ b/packages/ui-library/src/css/icons/_style.scss
@@ -411,6 +411,12 @@
     content: $icon-key-two; 
   }
 }
+.icon-ldap {
+  &:before {
+    content: $icon-ldap;     
+    color: #4b637c;
+  }
+}
 .icon-left {
   &:before {
     content: $icon-left; 
