UIP-3326 Chart should not display 0 values

--- a/packages/ui-library/src/css/charting/_chart-wrapper.scss
+++ b/packages/ui-library/src/css/charting/_chart-wrapper.scss
@@ -3,6 +3,7 @@
     text-align: center;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     height: 100%;
 
     &__loader,
@@ -20,6 +21,7 @@
     }
     &__message {
         pointer-events: none;
+        text-transform: uppercase;
     }
     &__loader {
         background: rgba($color-white, 0.6);
