UIP-3303 LabelValuePairs uses table tags when using IE.

--- a/packages/ui-library/src/css/layout/_label-value-pairs.scss
+++ b/packages/ui-library/src/css/layout/_label-value-pairs.scss
@@ -17,6 +17,18 @@
     }
 }
 
+// IE Version
+td.label-value-pairs__label {
+    padding-right: $spacing-md;
+}
+
+.label-value-pairs {
+    td {
+        vertical-align: top;
+        padding-bottom: $spacing-md;
+    }
+}
+
 .label-value-pairs__value {
     @include text-value;
 
