--- a/packages/ui-library/src/css/_result-sets.scss
+++ b/packages/ui-library/src/css/_result-sets.scss
@@ -70,6 +70,9 @@ $expandable-row-gap: 12px;
         min-height: 3 * $button-height - 4px;
     }
     .expanded-content-scroller {
+        overflow-x: hidden;
+        @include break-word;
+
         // trying to do some magic here to make sure indentation is always correct
         > *,
         > .flex-row > * {
@@ -227,6 +230,12 @@ $expandable-row-gap: 12px;
         background-color: $color-white;
         max-height: 4000px;
         border: 1px solid $color-rabbit-fur;
+
+        .expanded-content-scroller {
+            overflow-y: auto;
+            max-height: 3500px;
+            box-sizing: border-box;
+        }
 
         //transition: max-height 1s);
 
