--- a/packages/ui-library/src/css/details-tooltip/_popover.scss
+++ b/packages/ui-library/src/css/details-tooltip/_popover.scss
@@ -128,6 +128,12 @@ $max-popover-width: 360px;
 
     &__trigger {
         display: inline-block;
+
+        &--no-hover {
+            &:hover {
+                text-decoration: none;
+            }
+        }
     }
 }
 
