--- a/packages/ui-library/src/css/general/_formatted-content.scss
+++ b/packages/ui-library/src/css/general/_formatted-content.scss
@@ -149,4 +149,32 @@
             background-color: transparent;
         }
     }
+
+    table {
+        border-collapse: separate;
+
+        th,
+        td {
+            padding: 9px 20px 9px 0;
+            border-bottom: 1px dotted $color-rabbit-fur;
+            text-align: left;
+            box-sizing: border-box;
+            line-height: 1.1em;
+            vertical-align: baseline;
+            height: inherit;
+        }
+
+        th {
+            @include text-label;
+            border-bottom-style: solid;
+        }
+
+        td {
+            @include text-value;
+        }
+
+        tr:last-child td {
+            border-bottom-style: none;
+        }
+    }
 }
