--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -1,6 +1,14 @@
 $icomoon-font-path: "../fonts/icons"; // KEEP - designates relative path to icons file where this is imported
 $icomoon-font-family: "iconfont"; // KEEP - designates name of font
 
+$icon-star-outline: "\e902";
+$icon-star: "\e901";
+$icon-kebab: "\e900";
+$icon-ldap: "\e947";
+$icon-shield-arrow: "\e946";
+$icon-key-three: "\e944";
+$icon-key-two: "\e945";
+$icon-open-lock: "\e943";
 $icon-download-box: "\e942";
 $icon-camera: "\e935";
 $icon-email: "\e936";
@@ -18,27 +26,27 @@ $icon-mobile: "\e941";
 $icon-account: "\61";
 $icon-admin-account: "\74";
 $icon-alert: "\21";
-$icon-alert-solid: "\e900";
+$icon-alert-solid: "\e905";
 $icon-approve: "\70";
 $icon-apps: "\6c";
-$icon-as: "\e904";
+$icon-as: "\e906";
 $icon-badge: "\62";
 $icon-bar-chart: "\e90f";
 $icon-bar-line-chart: "\e913";
 $icon-beaker: "\e90a";
-$icon-books: "\e903";
+$icon-books: "\e907";
 $icon-browser: "\e917";
 $icon-bullet-list: "\e920";
 $icon-cabinet: "\24";
 $icon-calendar: "\43";
 $icon-cert-connection: "\e925";
-$icon-certificate: "\e901";
+$icon-certificate: "\e908";
 $icon-chat: "\e90e";
 $icon-chat-square: "\e918";
 $icon-circle: "\2e";
 $icon-circle-o: "\4f";
 $icon-clear: "\58";
-$icon-clipboard: "\e908";
+$icon-clipboard: "\e909";
 $icon-close: "\78";
 $icon-close-arrow: "\5e";
 $icon-code: "\e91d";
@@ -50,14 +58,14 @@ $icon-connection-status: "\e931";
 $icon-curly-braces: "\e921";
 $icon-delete: "\64";
 $icon-desktop: "\e916";
-$icon-details: "\e902";
-$icon-device: "\e906";
+$icon-details: "\e90b";
+$icon-device: "\e90c";
 $icon-directory: "\3d";
 $icon-directory-hollow: "\23";
 $icon-docs: "\e927";
 $icon-download: "\44";
 $icon-dropdown-arrow: "\76";
-$icon-earth: "\e905";
+$icon-earth: "\e90d";
 $icon-edit: "\65";
 $icon-error-triangle: "\e914";
 $icon-expand: "\45";
@@ -65,10 +73,10 @@ $icon-expand-arrow: "\59";
 $icon-facebook: "\e929";
 $icon-file: "\2c";
 $icon-filter: "\66";
-$icon-fingerprint: "\e909";
+$icon-fingerprint: "\e910";
 $icon-globe: "\a1";
 $icon-grip: "\47";
-$icon-group: "\e907";
+$icon-group: "\e911";
 $icon-help: "\68";
 $icon-help-rounded: "\48";
 $icon-help-solid: "\e91e";
@@ -76,9 +84,6 @@ $icon-idp: "\6a";
 $icon-image: "\69";
 $icon-info: "\49";
 $icon-key: "\4b";
-$icon-key-three: "\e944";
-$icon-key-two: "\e945";
-$icon-ldap: "\e947";
 $icon-left: "\3c";
 $icon-line-chart: "\e92c";
 $icon-link: "\6b";
@@ -93,31 +98,29 @@ $icon-native-app: "\e934";
 $icon-network: "\25";
 $icon-new-window: "\e91f";
 $icon-next: "\7d";
-$icon-nodes: "\e911";
+$icon-nodes: "\e915";
 $icon-non-interactive: "\e91a";
-$icon-notepad: "\e90b";
-$icon-on-off: "\e910";
-$icon-open-lock: "\e943";
-$icon-org-chart: "\e915";
+$icon-notepad: "\e91b";
+$icon-on-off: "\e922";
+$icon-org-chart: "\e923";
 $icon-overview: "\6f";
 $icon-pin: "\4e";
-$icon-play: "\e90c";
+$icon-play: "\e924";
 $icon-plus: "\2b";
 $icon-plus-rounded: "\2a";
-$icon-population: "\e923";
+$icon-population: "\e926";
 $icon-previous: "\7b";
 $icon-puzzle: "\7a";
-$icon-radar: "\e90d";
+$icon-radar: "\e928";
 $icon-resend: "\72";
-$icon-resource: "\e922";
+$icon-resource: "\e92a";
 $icon-right: "\3e";
-$icon-robot: "\e926";
+$icon-robot: "\e92d";
 $icon-saml: "\e930";
 $icon-search: "\73";
 $icon-server: "\20ac";
 $icon-settings: "\53";
-$icon-shield-arrow: "\e946";
-$icon-shield: "\e91b";
+$icon-shield: "\e92e";
 $icon-signpost: "\e933";
 $icon-slider: "\7e";
 $icon-sort-asc: "\41";
@@ -128,17 +131,17 @@ $icon-spin-down: "\30";
 $icon-spin-up: "\31";
 $icon-spinner: "\50";
 $icon-success: "\79";
-$icon-success-round: "\e92e";
+$icon-success-round: "\e92f";
 $icon-support: "\71";
-$icon-tag: "\e924";
-$icon-terminal: "\e928";
+$icon-tag: "\e932";
+$icon-terminal: "\e948";
 $icon-thumb: "\54";
-$icon-timer: "\e932";
-$icon-twitter: "\e92a";
+$icon-timer: "\e949";
+$icon-twitter: "\e94a";
 $icon-undo: "\6e";
-$icon-unlink: "\e92d";
+$icon-unlink: "\e94b";
 $icon-user: "\75";
-$icon-user_directory: "\e92f";
+$icon-user_directory: "\e94c";
 $icon-users: "\55";
 $icon-view: "\56";
 $icon-view-hidden: "\2f";
